[package]
name = "kutout"
version = "0.1.0"
edition = "2021"
description = "mitm toolkit for penetration testing"
license = "MIT"

[dependencies]
pnet = "0.34"
pnet_datalink = "0.34"
pnet_packet = "0.34"
clap = { version = "=4.4.18", features = ["derive"] }
ratatui = "=0.26.3"
crossterm = "=0.27.0"
anyhow = "=1.0.79"
log = "=0.4.20"
env_logger = "=0.10.2"
ctrlc = "=3.4.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
socket2 = "0.5"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = false
strip = true
